--- a/.github/workflows/pr-build-remaining-tests.yml
+++ b/.github/workflows/pr-build-remaining-tests.yml
@@ -34,7 +34,7 @@ jobs:
             --header 'content-type: application/json' \
             --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
             --data '{
-              "state": "${{ job.status }}"
+              "state": "${{ job.status }}",
               "context": "Build With Remaining Tests", 
               "description": "Run PTS remaining tests before merge" 
               }'
