--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -18,7 +18,7 @@ jobs:
         distribution: 'temurin'
     - name: Set up Gradle Build Action
       uses: gradle/gradle-build-action@v2
-    - name: Create pending status check for Build with remaining tests
+    - name: Init status check for Build with remaining tests
       run: |
         curl \
           --request POST \
@@ -30,5 +30,5 @@ jobs:
             "context": "Build With Remaining Tests", 
             "description": "Run PTS remaining tests before merge" 
             }'
-    - name: Build with Gradle
+    - name: Build with PTS (relevant tests)
       run: ./gradlew build -PenablePTS
