--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      statuses: write
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
