--- a/.github/workflows/pr-build-remaining-tests.yml
+++ b/.github/workflows/pr-build-remaining-tests.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Gradle Build Action
         uses: gradle/gradle-build-action@v2
       - name: Build with PTS (remaining tests)
-        run: ./gradlew build -Dpts.mode=REMAINING_TESTS
+        run: ./gradlew build -Dpts.enabled=true -Dpts.mode=REMAINING_TESTS
       - name: Update status check for Build with remaining tests
         if: always()
         run: |
