--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -18,5 +18,5 @@ jobs:
         distribution: 'temurin'
     - name: Set up Gradle Build Action
       uses: gradle/gradle-build-action@v2
-    - name: Build with PTS (remaining tests)
-      run: ./gradlew build -Dpts.enabled=true -Dpts.mode=REMAINING_TESTS
+    - name: Build without PTS
+      run: ./gradlew build
